# crafting_interpreters

./: CMakeLists.txt  Readme.md  main.cpp
include/: AstInterpreter.h  AstPrinter.h  Environment.h  Expr.h  LoxValue.h  ParseError.h  Parser.h  RuntimeError.h  Scanner.h  Statement.h  Token.h  TokenType.h  TypeCast.h  Value.h  Visitor.h  utils.h
lib/: AstInterpreter.cpp  AstPrinter.cpp  Environment.cpp  Expr.cpp  Expression.cpp  Parser.cpp  RuntimeError.cpp  Scanner.cpp  TypeCast.cpp  Value.cpp  utils.cpp
src/: AstPrinter.cpp  Parser.cpp  Scanner.cpp  Value.cpp  utils.cpp
test/: CMakeLists.txt
test/src/: main.cpp
test/src/parser/: parser.ParserTests.Assignment.approved.txt  parser.ParserTests.Block.approved.txt  parser.ParserTests.BooleanAlgebra.approved.txt  parser.ParserTests.Collatz.approved.txt  parser.ParserTests.ExpressionInDeclaration.approved.txt  parser.ParserTests.Fibonacci.approved.txt  parser.ParserTests.Fizzbuzz.approved.txt  parser.ParserTests.ForLoop.approved.txt  parser.ParserTests.FunctionDefinition.approved.txt  parser.ParserTests.IfElseStatement.approved.txt  parser.ParserTests.IfStatement.approved.txt  parser.ParserTests.MultiLineStatement.approved.txt  parser.ParserTests.MultipleBlocks.approved.txt  parser.ParserTests.WhileLoop.approved.txt  parser.cpp
